--- a/static/index.html
+++ b/static/index.html
@@ -8,17 +8,17 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Philip Guo</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Jacob Aguirre</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Philip Guo is an assistant professor of cognitive science at UC San Diego (Go Tritons!). His research spans human-computer interaction, online learning, and computing education.</p>
+	<p>Jacob Aguirre is a fourth year Cognitive Science major at UCSD specializing in Human Cognition. He is a kind, loveable human being who loves people, places, and things. And sometimes ideas! If you wish to contact him, his number is 1-800-DID-IASK. He looks forward to talking with you soon. (:</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
+		<li>Trolling in Messenger Chats 101</li>
+		<li>Badly Photoshopping Things</li>
+		<li>Misusing Ellipses</li>
 		<li>...</li>
 	</ol>
 </body>
